gitops/platform/gateway/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: demo-gateway
  namespace: demo
spec:
  gatewayClassName: envoy-lab
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: demo.lab.home.arpa
      allowedRoutes:
        namespaces:
          from: Same
